examples/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-workshop-namespace
  labels:
    name: test-workshop-namespace
    app: test-workshop
