examples/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-workshop-pod1
  labels:
    name: test-workshop-pod1
    app: test-workshop
spec:

  containers:
    - name: myapp-container
      image: busybox
      command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 3600']
