examples/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-workshop-pod2
  labels:
    app.kubernetes.io/name: rf-primary-receiver
    app.kubernetes.io/instance: rf-primary-receiver
    joom.com/env: production
    joom.com/service: "joom-rf-primary-receiver-openresty"
    joom.com/version: master-3190777.1573226822
  annotations:
    checksum/configmap: 84eb1dcf63b5581257554b888b4809970ac9ee923a5a479571cff4a7d1f71cf7
spec:
  containers:
    - name: joom-rf-primary-receiver-openresty
      image: "docker.joom.it/rf-receiver-openresty:master-3190777.1573226822"
      imagePullPolicy: IfNotPresent
      ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: metrics
          containerPort: 8080
          protocol: TCP
      livenessProbe:
        httpGet:
          path: /ping
          port: metrics
      readinessProbe:
        httpGet:
          path: /ping
          port: metrics
      volumeMounts:
        - name: nginx-conf
          mountPath: /etc/rf-receiver/nginx/
    - name: dnsmasq
      image: "janeczku/go-dnsmasq:release-1.0.7"
      args:
        - --listen
        - "127.0.0.1:53"
        - --default-resolver
        - --append-search-domains
        - --hostsfile=/etc/hosts
        - --hostsfile-poll=4
        - --verbose
  volumes:
    - name: nginx-conf
      configMap:
        name: configmap-openresty
  tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
    - effect: NoSchedule
      key: node.kubernetes.io/disk-pressure
      operator: Exists
    - effect: NoSchedule
      key: node.kubernetes.io/memory-pressure
      operator: Exists
    - effect: NoSchedule
      key: node.kubernetes.io/pid-pressure
      operator: Exists
    - effect: NoSchedule
      key: node.kubernetes.io/unschedulable
      operator: Exists
