examples/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rf-primary-receiver
  labels:
    app.kubernetes.io/name: rf-primary-receiver
    helm.sh/chart: rf-primary-receiver
    app.kubernetes.io/instance: rf-primary-receiver
    app.kubernetes.io/managed-by: helm
spec:
  rules:
    - host: api.joom.com
      http:
        paths:
          - path: "/1.1/ws"
            backend:
              serviceName: rf-primary-receiver-svc-api--gateway
              servicePort: 443
          - path: "/1.1/upload"
            backend:
              serviceName: rf-primary-receiver-svc-api--gateway
              servicePort: 443
          - path: /
            backend:
              serviceName: test-workshop-svc
              servicePort: 80
    - host: www.joom.com
      http:
        paths:
          - backend:
              serviceName: rf-primary-receiver-svc-api--webcom-gateway
              servicePort: 443
            path: /
